--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <body>
     <header>
       <div class="container">
-        <h1>Bkpandeymca.GitHub.io</h1>
-        <h2>website</h2>
+        <h1>Bhupendra Kumar Pandey</h1>
+        <h2>Dev</h2>
         <section id="downloads">
           <a href="https://github.com/bposd" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
